--- a/src/app/items/items.component.css
+++ b/src/app/items/items.component.css
@@ -2,6 +2,10 @@ h2{
   margin: 0;
 }
 
+a{
+  text-decoration: none;
+}
+
 .w-50{
   width: 50%;
 }
@@ -39,6 +43,7 @@ h2{
   gap: 1rem;
   background-color: #26283d;
   padding: 0.2rem;
+  align-items: center;
 }
 
 .row .name{
@@ -64,7 +69,6 @@ h2{
 }
 
 
-
-
-
-
+.btn-details{
+  color: white;
+}
